--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-load-config": "^1.2.0",
+    "postcss-salad": "^2.0.0",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
