--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.1",
     "swiper": "^3.4.2",
     "vue": "^2.2.6",
+    "vue-awesome-swiper": "^2.4.2",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
