--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "postcss-px2rem": "^0.3.0",
     "swiper": "^3.4.2",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
